# Qt-NCNN-ByteTrack

./: .gitignore  CMakeLists.txt  GUI.cpp  GUI.hpp  GUI.ui  LICENSE  Mark.hpp  README.md  TcpSocket.cpp  TcpSocket.hpp  main.cpp  ncnn_yolo.cpp  ncnn_yolo.hpp  styles.qss  ui.hpp  uiBeautify.cpp  uiBeautify.hpp  yolov8-seg.cpp
ByteTrack/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h
Model/: 2023-12-6 Mask.param  2024-6-7 Mask.param  2024-6-7 Mask.txt  2024-6-8 Sign.param  2024-6-8 Sign.txt  yolov8s-seg.txt
